--- a/5.1.html
+++ b/5.1.html
@@ -52,6 +52,11 @@
                         <p class="lead">Las capas o estratos que estudia la estratigrafía se observan en la superficie terrestre cuando las capas quedan expuestas en los llamados afloramientos rocosos. También se pueden estudiar en minas, canteras, excavaciones o pozos.
                         </p>
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.1.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
