--- a/5.10.2.html
+++ b/5.10.2.html
@@ -35,6 +35,11 @@
                         </ul>
 
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.10.2.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
