--- a/5.4.html
+++ b/5.4.html
@@ -50,6 +50,12 @@
 
                         <p class="lead">La geomorfología desempeña un papel crucial en la ingeniería civil al proporcionar información valiosa sobre las características del suelo y las rocas presentes en un sitio de construcción. Esto permite diseñar estructuras seguras y estables, minimizar el impacto ambiental y garantizar la protección del medio ambiente.</p>
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.4.png" class="img-fluid" alt="imagen">
+                      </div>
+
+                
                 </div>
             </div>
         </section>
