--- a/5.5.html
+++ b/5.5.html
@@ -51,6 +51,11 @@
 
                        
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.5.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
