--- a/5.8.html
+++ b/5.8.html
@@ -47,6 +47,11 @@
                         <p class="lead"> Es el planteamiento a futuro de una comunidad o la guía de expansión para la comunidad actual, de manera organizada previendo condiciones medioambientales, sociales y recreativas a sus ciudadanos</p>
                         
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.8.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
