--- a/index.html
+++ b/index.html
@@ -173,6 +173,19 @@
             </div>
         </section>
 
+        
+        <section class="bg-light w-auto p-5" id="services">
+            <div class="container px-4">
+                <div class="row gx-4 justify-content-center">
+                    <div class="col-lg-8">
+                        <h1><a class="navbar-brand " href="ref.html">Referencias bibliográficas
+
+                        </a></h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-4"><p class="m-0 text-center text-white"></p></div>
