--- a/5.10.html
+++ b/5.10.html
@@ -39,6 +39,11 @@
 
 
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.10.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
