--- a/5.3.html
+++ b/5.3.html
@@ -40,6 +40,11 @@
         
                         
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.3.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
