--- a/5.6.html
+++ b/5.6.html
@@ -52,6 +52,11 @@
                         </ul>
                         
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.6.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
