--- a/5.7.html
+++ b/5.7.html
@@ -45,6 +45,11 @@
                         
                        
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.7.png" class="img-fluid" alt="imagen">
+                      </div>
+
                 </div>
             </div>
         </section>
