--- a/5.9.html
+++ b/5.9.html
@@ -47,6 +47,11 @@
 
                     
                     </div>
+
+                    <div class="text-center col-lg-6">
+                        <img src="img/img_5.9.png" class="img-fluid" alt="imagen">
+                      </div>
+                      
                 </div>
             </div>
         </section>
